src/test/deca/syntax/valid/class_alone2.deca
//Description
//    Vérifier la decl de class
//
//Résultats :
//    
//

class A{}
