src/test/deca/syntax/invalid/while3.deca
//Description
//    Vérifier le while
//
//Résultats :
//    Erreur Syntaxique ligne 9
//

{
while(class A){{}}
}
